fix: More contrast to play button outline

--- a/src/components/PuzzleList/PuzzleList.css
+++ b/src/components/PuzzleList/PuzzleList.css
@@ -59,5 +59,5 @@
 }
 
 .PlayButton:focus {
-  outline: 4px solid rgb(178, 226, 255, 0.6);
+  outline: 4px solid rgba(147, 208, 247, 0.8);
 }
